Writethrough for 24 Sept 2023

--- a/newsletter/2023-09-24.md
+++ b/newsletter/2023-09-24.md
@@ -5,109 +5,41 @@
 
 [Hall's report](https://www.youtube.com/watch?v=UPp0Xbk4bFo) from the trip is eye-opening stuff indeed. In particular, I highly recommend it to anyone from a rich country who has a strong opinion on bitcoin, pro or con.
 
-Some context: Cuba is undergoing a serious economic crisis right now, including a sharp currency devaluation. Reuters reported last month that inflation is running at [45% a year](https://www.reuters.com/world/americas/cubans-struggle-peso-loses-half-its-value-year-informal-market-2023-08-02/), with the Cuban peso recently trading at 230 pesos to one U.S. dollar.
+Some context: Cuba is undergoing a serious economic crisis right now, including a sharp currency devaluation. Reuters reported last month that inflation is running at [45% a year](https://www.reuters.com/world/americas/cubans-struggle-peso-loses-half-its-value-year-informal-market-2023-08-02/), with the Cuban peso recently changing hands at 230 pesos to one U.S. dollar.
 
-Anecdotally, Hall's sources in Cuba estimated on-camera that the peso's purchasing power is now just one-eighth what it was against the U.S. dollar two years ago.
+That sort of instability wreaks absolute havoc on every aspect of daily economic life, from buying groceries to retirement saving. We've seen similar narratives in several other countries that have had heavy bitcoin adoption like [Argentina](https://www.cryptopolitan.com/bitcoin-hits-new-highs-in-argentina/) and [Venezuela](https://news.bitcoin.com/venezuela-numbers-cryptocurrency-adoption-factors/).
 
-In that sort of currency collapse, which has no real parallel in U.S. history, people might look for an alternative form of money to trust. And maybe it's bitcoin.
+For people in countries like the U.S., where I live, such dire scenarios tend to be unfathomable. We tend to take for granted that the dollar reigns supreme, that it's widely accepted for payments, that the nearest bank branch will open on time everyday, and that our deposits will be safe there for when we need them.
 
-We've recently seen similar situations in Argentina and Venezuela. El Salvador, Nigeria, and Montserrat.
+For bitcoin skeptics in the rich world, it's worth remembering that [not everyone](https://www.msn.com/en-us/money/markets/is-it-way-more-risky-to-hold-fiat-in-latin-america-and-africa-than-crypto/ar-AA1h7WNZ) enjoys such everyday certainties. And some people who don't might seek out an alternative monetary system like the Bitcoin network, for [perfectly rational reasons](https://www.investopedia.com/trading/how-fiat-currency-crises-drive-nations-toward-cryptocurrencies/).
 
+For pro-bitcoiners as well, it's always worth noting that several real-world monetary crises like Cuba's exist *right now*. Perhaps it would be a more effective argument to win people over to point out these very tangible situations versus theorizing about how the dominant USD-based banking system is headed toward collapse any day now.
 
+Hey, you might eventually prove right about the latter. I've [criticized the USD-based system](https://peteramckay.medium.com/crypto-vs-mmt-competing-visions-of-how-money-should-work-410f4b7da381) myself [at times](https://peteramckay.medium.com/of-course-this-is-mmt-fde064179528). But the unavoidable reality is that people tend to believe more readily in what they can see with their own two eyes today.
 
+So *show* them, as Hall deftly did in Cuba. Don't merely tell them.
 
-This sort of situation is inconceivable in a country like the U.S., where the currency is widely accepted and most people trust conventional, regulated banks.  
+The week's other notable headlines:
 
+- **Miner revenue hit a 9-month low on the Ethereum network** as transaction activity flagged. Available supply of ETH tokens is edging higher as a result. Ouch. ([CoinDesk](https://www.coindesk.com/markets/2023/09/22/ether-turns-inflationary-as-network-revenue-plunges-to-9-month-low/))
 
+- **A senior Binance executive** said the exchange plans to [de-list stablecoins in Europe](https://cointelegraph.com/news/binance-delist-stablecoins-in-europe-mica-compliance) by mid-2024 in order to comply with new regulations on such tokens there. Separately, Binance's legal battle [with U.S. regulators](https://www.coindesk.com/policy/2023/09/22/binance-us-affiliate-changpeng-cz-zhao-file-to-dismiss-sec-lawsuit/) over alleged securities-law violations is intensifying.
 
+- **Tether made a strategic investment** in Northern Data Group, a German artificial-intelligence company. ([The Block](https://www.theblock.co/post/252360/tether-makes-strategic-investment-in-northern-data-group))
 
+- **Bitcoin miners and hardware makers** focused on environmental sustainability at the World Digital Mining Summit in Hong Kong. ([Cointelegraph](https://cointelegraph.com/news/bitcoin-miners-focus-on-efficiency-renewable-energy-at-world-digital-mining-summit))
 
-As an American, I feel like much of bitcoin skepticism I hear at home is rooted in a lack of empathy for societies that don't necessarily resemble our own. We live in a country where our currency is widely accepted, our banks are regulated, and public courts enforce contracts pretty strictly.
+- **A rough week for NFTs:** OpenSea told developers to [update the keys](https://www.theblock.co/post/252675/opensea-tells-users-to-rotate-api-keys-after-third-party-security-breach) they use to build apps on top of the popular trading platform due to a security breach. Meanwhile, a new analysis by the gambling platform dappGambl suggests that 95% of non-fungible tokens [are now worthless](https://dappgambl.com/nfts/dead-nfts/).
 
-It's easy for people  
+- **Total value locked (TVL) on the Coinbase-run network Base** has surged near $400 million since launching in August, surpassing rival Solana. ([Cointelegraph](https://cointelegraph.com/news/base-surges-past-solana-total-value-locked))
 
+- **NEAR Foundation CEO Marieke Flament** stepped down after a two-year run. General counsel Chris Donovan will replace her. ([Coindesk](https://www.coindesk.com/business/2023/09/21/near-foundations-marieke-flament-steps-down-as-ceo/))
 
+- **FTX updates:** Forbes reports that Coinbase [considered a bid](https://fortune.com/crypto/2023/09/22/coinbase-ftx-europe-derivatives-futures-binance-crypto/) for bankrupt exchange rival FTX's European unit late last year. In the U.S., FTX's lawyers are now [suing founder Sam Bankman-Fried's parents](https://www.cnbc.com/2023/09/19/sbfs-parents-sued-by-ftx-for-millions-of-dollars-in-misappropriated-funds.html) to recoup $26 million in cash and gifts that the lawyers believe should go toward repaying FTX's creditors.  
 
+- **Defunct exchange Mt. Gox's** court-appointed trustee in Tokyo extended the deadline for creditor repayments to Oct. 24, 2024. ([Decrypt](https://decrypt.co/198147/mt-gox-trustee-extends-deadline-for-creditor-repayments-by-a-year))
 
-
-
-
-
-###1. The BTC token is money conjured out of thin air, with no intrinsic value.
-
-Reuters report: https://www.reuters.com/world/americas/cubans-struggle-peso-loses-half-its-value-year-informal-market-2023-08-02/
-
-###2. Using the Bitcoin network is risky compared to the protections of conventional banks.
-
-tktk
-
-###3. You can't really spend or use BTC for anything.
-
-*Everyone isn't like you, and the circumstances where they live might be wildly different from the ones you take for granted in your country.*
-
-
-
-
-In 2 years, the Cuban peso is worth 1/8 what it was against the USD, according to the video.
-
-blocked from using VPNs,
-
-
-The week's notable headlines:
-
-- Binance issues! Some stories as of Thursday: https://decrypt.co/197850/binance-sec-us-ceffu-merit-peak | https://www.coindesk.com/policy/2023/09/18/binance-is-supposedly-separate-from-crypto-custodian-ceffu-the-sec-has-questions/ | https://www.coindesk.com/policy/2023/09/19/some-binance-eu-users-find-fiat-withdrawals-cut-off-even-before-paysafe-ends-service/ | https://www.coindesk.com/markets/2023/09/19/binances-bitcoin-trading-volume-plunges-57-as-regulatory-pressure-mounts/ ((Check again Friday, in case anything else is breaking...))
-
-- https://www.theblock.co/post/252675/opensea-tells-users-to-rotate-api-keys-after-third-party-security-breach
-
-- JPMorgan says last Ethereum upgrade was "disappointing" https://www.coindesk.com/markets/2023/09/22/ethereums-shanghai-upgrade-has-failed-to-boost-network-activity-jpmorgan-says/ | ETH has turned inflationary. https://www.coindesk.com/markets/2023/09/22/ether-turns-inflationary-as-network-revenue-plunges-to-9-month-low/ | New ETH testnet had issues at launch. ((Need link)) | https://www.coindesk.com/markets/2023/09/22/ether-turns-inflationary-as-network-revenue-plunges-to-9-month-low/
-
-
-- SBF's parents are getting implicated in the FTX case. ((Need link))
-
-
-- A 27M loss on a DAO shows everything wrong with DAOs. https://www.coindesk.com/business/2023/09/21/nouns-daos-27m-revolt-reveals-toxic-mix-of-money-hungry-traders-and-blockchain-idealists/
-
-- New report says 90-plus percent of NFTs are worthless... https://dappgambl.com/nfts/dead-nfts/ | https://www.theguardian.com/technology/2023/sep/22/nfts-worthless-price#:~:text=NFTs%2C%20or%20non%2Dfungible%20tokens,A%20Clary%2FAFP%2FGetty%20Images
-
-- Swisher speculating that Musk might buy Fox News. ((Need link))
-
-- HBR on leading change ((Need link))
-
-- Cointelegraph's Joe Hall looked into bitcoin adoption in Cuba https://www.youtube.com/watch?v=UPp0Xbk4bFo
-
-- Big IMX rally... https://decrypt.co/198152/immutablex-up-25-after-south-korean-traders-drive-imx-price-surge
-
-- Flack message ((What was that thing she wanted in, again?))
-
-- George RR martin suing OpenAI https://decrypt.co/198076/game-of-thrones-george-rr-martin-ai-openai
-
-- Mt. Gox's trustee extended creditor repayments for a year https://decrypt.co/198147/mt-gox-trustee-extends-deadline-for-creditor-repayments-by-a-year |
-
-- https://www.coindesk.com/business/2023/09/21/top-3-crypto-myths-tackled-for-advisors/
-
-- NEAR Foundation's CEO stepped down. https://www.coindesk.com/business/2023/09/21/near-foundations-marieke-flament-steps-down-as-ceo/
-
-- https://decrypt.co/198425/police-seize-bitcoin-mining-machines-prison-bust-venezuela
-
-- https://cointelegraph.com/news/base-surges-past-solana-total-value-locked
-
-- https://fortune.com/crypto/2023/09/22/coinbase-ftx-europe-derivatives-futures-binance-crypto/
-
-- https://cointelegraph.com/news/architect-fintech-receives-nfa-approval-operate-introducing-broker
-
-- https://cointelegraph.com/news/bitcoin-miners-focus-on-efficiency-renewable-energy-at-world-digital-mining-summit
-
-- **Stablecoin issuer Tether** made a strategic investment in Northern Data Group, a German artificial-intelligence company. ([The Block](https://www.theblock.co/post/252360/tether-makes-strategic-investment-in-northern-data-group))
-
-
-
-- https://www.cnn.com/style/article/x-wing-model-star-wars-auction-intl-scli/index.html
-
-- https://www.space.com/archaeologists-fuming-over-ancient-human-relative-remains-sent-to-space
-
-- SBF's dad wanted a raised, cc'd Mom on the exchange with Sam. LOL. https://www.coindesk.com/policy/2023/09/19/sam-bankman-frieds-dad-thought-his-son-wasnt-paying-him-enough-so-he-got-mom-involved/ | https://www.coindesk.com/policy/2023/09/20/stanford-university-will-return-gifts-donated-by-ftx-report/
-
-- **Comedian Larry David** went off on Elon Musk [at a wedding reception](). Distressingly, no smartphone video of the incident has emerged. Yet.
+- **Comedian Larry David went off on Elon Musk** at a mutual acquaintance's wedding reception in 2022, according to a new biography of Musk. Distressingly, no smartphone video of the incident has emerged. Yet. ([HuffPost]((https://www.huffpost.com/entry/larry-david-elon-musk-republican-wedding-uvalde_n_6509df74e4b07fc0ba9cf2cc)))
 
 <!-- Boilerplate needs re-working. This is version from last week... -->
 
