--- a/newsletter/2023-09-24.md
+++ b/newsletter/2023-09-24.md
@@ -1,21 +1,21 @@
 # Bitcoin's global use cases
 ## #Web3Weekly: Sept. 17-23, 2023
 
-**Cointelegraph's Joe Hall just returned from Cuba,** where he attended the island's first big bitcoin meetup. (Or at least the first one that an English-language journalist with a video camera was present for.)
+**Cointelegraph's Joe Hall just returned from Cuba,** where he attended the island's first big bitcoin meetup. (Or at least the first one at which an English-language journalist with a video camera was present.)
 
-[Hall's report](https://www.youtube.com/watch?v=UPp0Xbk4bFo) from the trip is eye-opening stuff indeed. In particular, I highly recommend it to anyone from a rich country who has a strong opinion on bitcoin, pro or con.
+[Hall's report](https://www.youtube.com/watch?v=UPp0Xbk4bFo) from the trip is eye-opening stuff indeed. In particular, I recommend it to anyone from a rich country who has a strong opinion on bitcoin, pro or con.
 
-Some context: Cuba is undergoing a serious economic crisis right now, including a sharp currency devaluation. Reuters reported last month that inflation is running at [45% a year](https://www.reuters.com/world/americas/cubans-struggle-peso-loses-half-its-value-year-informal-market-2023-08-02/), with the Cuban peso recently changing hands at 230 pesos to one U.S. dollar.
+Some context: Cuba is undergoing a serious economic crisis, including a sharp currency devaluation. Reuters reported last month that inflation is running at [45% a year](https://www.reuters.com/world/americas/cubans-struggle-peso-loses-half-its-value-year-informal-market-2023-08-02/), with the Cuban peso recently changing hands at 230 pesos to one U.S. dollar.
 
-That sort of instability wreaks absolute havoc on every aspect of daily economic life, from buying groceries to retirement saving. We've seen similar narratives in several other countries that have had heavy bitcoin adoption like [Argentina](https://www.cryptopolitan.com/bitcoin-hits-new-highs-in-argentina/) and [Venezuela](https://news.bitcoin.com/venezuela-numbers-cryptocurrency-adoption-factors/).
+That sort of instability wreaks havoc on every aspect of daily economic life, from buying groceries to retirement saving. We've seen similar narratives in  other troubled countries that have had heavy bitcoin adoption like [Argentina](https://www.cryptopolitan.com/bitcoin-hits-new-highs-in-argentina/) and [Venezuela](https://news.bitcoin.com/venezuela-numbers-cryptocurrency-adoption-factors/).
 
-For people in countries like the U.S., where I live, such dire scenarios tend to be unfathomable. We tend to take for granted that the dollar reigns supreme, that it's widely accepted for payments, that the nearest bank branch will open on time everyday, and that our deposits will be safe there for when we need them.
+For people in places like the U.S., where I live, such dire scenarios are pretty much unfathomable. We tend to take for granted that the dollar reigns supreme, that it's widely accepted for payments, that the nearest bank branch will open on time everyday, and that our deposits will be safe there when we need them.
 
 For bitcoin skeptics in the rich world, it's worth remembering that [not everyone](https://www.msn.com/en-us/money/markets/is-it-way-more-risky-to-hold-fiat-in-latin-america-and-africa-than-crypto/ar-AA1h7WNZ) enjoys such everyday certainties. And some people who don't might seek out an alternative monetary system like the Bitcoin network, for [perfectly rational reasons](https://www.investopedia.com/trading/how-fiat-currency-crises-drive-nations-toward-cryptocurrencies/).
 
-For pro-bitcoiners as well, it's always worth noting that several real-world monetary crises like Cuba's exist *right now*. Perhaps it would be a more effective argument to win people over to point out these very tangible situations versus theorizing about how the dominant USD-based banking system is headed toward collapse any day now.
+For pro-bitcoiners as well, it's worth noting that several real-world monetary crises like Cuba's exist *right now*. Perhaps it would be a more effective argument to win people over to bitcoin to point out these very tangible situations versus theorizing about how the dominant USD-based banking system is headed toward collapse any day now.
 
-Hey, you might eventually prove right about the latter. I've [criticized the USD-based system](https://peteramckay.medium.com/crypto-vs-mmt-competing-visions-of-how-money-should-work-410f4b7da381) myself [at times](https://peteramckay.medium.com/of-course-this-is-mmt-fde064179528). But the unavoidable reality is that people tend to believe more readily in what they can see with their own two eyes today.
+Hey, you might eventually prove right about the latter. I've [criticized the USD-based system](https://peteramckay.medium.com/crypto-vs-mmt-competing-visions-of-how-money-should-work-410f4b7da381) myself [at times](https://peteramckay.medium.com/of-course-this-is-mmt-fde064179528). But it's unavoidable that people tend to believe more readily in what they can see with their own two eyes today.
 
 So *show* them, as Hall deftly did in Cuba. Don't merely tell them.
 
@@ -35,11 +35,11 @@ The week's other notable headlines:
 
 - **NEAR Foundation CEO Marieke Flament** stepped down after a two-year run. General counsel Chris Donovan will replace her. ([Coindesk](https://www.coindesk.com/business/2023/09/21/near-foundations-marieke-flament-steps-down-as-ceo/))
 
-- **FTX updates:** Forbes reports that Coinbase [considered a bid](https://fortune.com/crypto/2023/09/22/coinbase-ftx-europe-derivatives-futures-binance-crypto/) for bankrupt exchange rival FTX's European unit late last year. In the U.S., FTX's lawyers are now [suing founder Sam Bankman-Fried's parents](https://www.cnbc.com/2023/09/19/sbfs-parents-sued-by-ftx-for-millions-of-dollars-in-misappropriated-funds.html) to recoup $26 million in cash and gifts that the lawyers believe should go toward repaying FTX's creditors.  
+- **FTX updates:** Forbes reports that Coinbase [considered a bid](https://fortune.com/crypto/2023/09/22/coinbase-ftx-europe-derivatives-futures-binance-crypto/) for bankrupt FTX's European unit late last year. In the U.S., the failed exchange's lawyers are now [suing founder Sam Bankman-Fried's parents](https://www.cnbc.com/2023/09/19/sbfs-parents-sued-by-ftx-for-millions-of-dollars-in-misappropriated-funds.html) to recoup $26 million in cash and gifts that the lawyers believe should go toward repaying FTX's creditors.  
 
-- **Defunct exchange Mt. Gox's** court-appointed trustee in Tokyo extended the deadline for creditor repayments to Oct. 24, 2024. ([Decrypt](https://decrypt.co/198147/mt-gox-trustee-extends-deadline-for-creditor-repayments-by-a-year))
+- **Defunct exchange Mt. Gox's** court-appointed trustee in Tokyo extended the deadline for creditor repayments to Oct. 31, 2024. ([Decrypt](https://decrypt.co/198147/mt-gox-trustee-extends-deadline-for-creditor-repayments-by-a-year))
 
-- **Comedian Larry David went off on Elon Musk** at a mutual acquaintance's wedding reception in 2022, according to a new biography of Musk. Distressingly, no smartphone video of the incident has emerged. Yet. ([HuffPost]((https://www.huffpost.com/entry/larry-david-elon-musk-republican-wedding-uvalde_n_6509df74e4b07fc0ba9cf2cc)))
+- **Comedian Larry David went off on Elon Musk** at a mutual acquaintance's wedding reception in 2022, according to a new biography of Musk. Distressingly, no smartphone video of the incident has emerged. Yet. ([HuffPost](https://www.huffpost.com/entry/larry-david-elon-musk-republican-wedding-uvalde_n_6509df74e4b07fc0ba9cf2cc))
 
 <!-- Boilerplate needs re-working. This is version from last week... -->
 
