Adding an investopedia link

--- a/newsletter/2023-09-24.md
+++ b/newsletter/2023-09-24.md
@@ -9,7 +9,7 @@ Some context: Cuba is undergoing a serious economic crisis, including a sharp cu
 
 That sort of instability wreaks havoc on every aspect of daily economic life, from buying groceries to retirement saving. We've seen similar narratives in  other troubled countries that have had heavy bitcoin adoption like [Argentina](https://www.cryptopolitan.com/bitcoin-hits-new-highs-in-argentina/) and [Venezuela](https://news.bitcoin.com/venezuela-numbers-cryptocurrency-adoption-factors/).
 
-For people in places like the U.S., where I live, such dire scenarios are pretty much unfathomable. We tend to take for granted that the dollar reigns supreme, that it's widely accepted for payments, that the nearest bank branch will open on time everyday, and that our deposits will be safe there when we need them.
+For people in places like the U.S., where I live, such dire scenarios are pretty much unfathomable. We tend to take for granted that the dollar reigns supreme as a [store of value](https://www.investopedia.com/terms/s/storeofvalue.asp), that it's widely accepted for payments, that the nearest bank branch will open on time everyday, and that our deposits will be safe there when we need them.
 
 For bitcoin skeptics in the rich world, it's worth remembering that [not everyone](https://www.msn.com/en-us/money/markets/is-it-way-more-risky-to-hold-fiat-in-latin-america-and-africa-than-crypto/ar-AA1h7WNZ) enjoys such everyday certainties. And some people who don't might seek out an alternative monetary system like the Bitcoin network, for [perfectly rational reasons](https://www.investopedia.com/trading/how-fiat-currency-crises-drive-nations-toward-cryptocurrencies/).
 
