fleshing out roundup items

--- a/newsletter/2023-10-08.md
+++ b/newsletter/2023-10-08.md
@@ -9,27 +9,15 @@ Lead item. Remember: Keep it to ~400 words!
 
 The week's notable headlines:
 
-- SBF trial update. <!-- Need links -->
+- **FTX founder Sam Bankman-Fried's trial** on federal fraud charges began in New York. The biggest early development was testimony Thursday and Friday by former FTX executive Gary Wang. He said Bankman-Fried was fully aware that $8 billion in customer money had been moved from FTX to Alameda Research, a hedge fund controlled by Bankman-Fried. ([New York Times](https://www.nytimes.com/2023/10/06/technology/gary-wang-ftx-sam-bankman-fried-trial.html))
 
-- https://decrypt.co/200534/stablecoins-down-35-percent-against-treasury-yields
+- **New challenges for Ethereum?** JPMorgan analysts said in a new research report that the number-two network has [become more centralized](https://www.coindesk.com/tech/2023/10/06/ethereum-has-become-more-centralized-since-the-merge-and-shanghai-upgrades-jpmorgan/) following its recent transition to a proof-of-stake algorithm for verifying transactions and its upgrade to enable "liquid" trading of staked tokens. Separately, Bitcoinist reported on new metrics showing that the Tron network has [more daily active addresses](https://bitcoinist.com/tron-daily-active-addresses-ethereum/) than Ethereum, boosted largely by stablecoin transactions.
 
-- https://www.coindesk.com/business/2023/10/06/tokenized-us-treasuries-arrive-on-coinbases-base-with-backeds-rwa-token-issuance/
+- **Global market vaulation of stablecoins** has fallen for 18 straight months, down 35% to $124 billion as of yesterday. A mix of factors is driving the slowdown, including reduced appetite for crypto among retail investors and higher interest rates on conventional bank deposits. ([Decrypt](https://decrypt.co/200534/stablecoins-down-35-percent-against-treasury-yields))
 
-- https://www.theblock.co/post/255260/web3-platform-galxe-hit-by-dns-attack-on-front-end-website
+- **More layoffs:** Crypto wallet maker [Ledger](https://www.coindesk.com/business/2023/10/05/crypto-custody-firm-ledger-cuts-12-of-staff/), NFT issuer [Bored Ape Yacht Club](https://decrypt.co/200455/bored-ape-yacht-club-nft-creator-yuga-labs-confirms-layoffs), and research firm [Chainalysis](https://www.coindesk.com/business/2023/10/03/blockchain-analytics-firm-chainalysis-cuts-15-staff/ ) all announced staff cuts. Sigh...
 
-- https://decrypt.co/news-explorer?pinned=333832&title=hong-kong-police-arrest-seven-more-in-200m-jpex-probe
-
-- https://decrypt.co/200463/difference-in-bull-and-bear-crypto-market-gains-is-negligible-say-analysts
-
-- https://bitcoinist.com/tron-daily-active-addresses-ethereum/
-
-- https://www.coindesk.com/tech/2023/10/06/ethereum-has-become-more-centralized-since-the-merge-and-shanghai-upgrades-jpmorgan/?utm_medium=referral&utm_source=feedly&utm_campaign=headlines
-
-- **More layoffs:** https://www.coindesk.com/business/2023/10/03/blockchain-analytics-firm-chainalysis-cuts-15-staff/ | https://decrypt.co/200455/bored-ape-yacht-club-nft-creator-yuga-labs-confirms-layoffs | https://www.coindesk.com/business/2023/10/05/crypto-custody-firm-ledger-cuts-12-of-staff/
-
-- https://foundation.mozilla.org/en/privacynotincluded/articles/its-official-cars-are-the-worst-product-category-we-have-ever-reviewed-for-privacy/
-
-- The world's first space junk fine: https://www.technologyreview.com/2023/10/05/1080999/first-space-junk-fine/
+- **U.S. broadcast regulators levied the first-ever fine for space junk.** The Federal Communications Commission leveled a $150,000 penalty against TV provider Dish for failing to move one of its satellites into a safe orbit. The decision could ignite a market for services to dispose of old man-made devices in space. ([MIT Technology Review](https://www.technologyreview.com/2023/10/05/1080999/first-space-junk-fine/))
 
 <!-- Boilerplate needs re-working. This is version from last week... -->
 
