Fleshing out the draft

--- a/newsletter/2023-10-22.md
+++ b/newsletter/2023-10-22.md
@@ -1,53 +1,86 @@
-# tktk
+# Bitcoin: Coming soon to a stock exchange near you?
 ## #Web3Weekly: Oct. 15-21, 2023
 
-<!-- Pickup art from Unsplash. -->
+![NYSE bell ringing ceremony](https://upload.wikimedia.org/wikipedia/commons/2/21/Director_Petraeus_rings_opening_bell_at_NY_Stock_Exchange_-_Flickr_-_The_Central_Intelligence_Agency.jpg)
+<!--
 
-**tktktk**
+Full photo info/specs at https://commons.wikimedia.org/wiki/File:Director_Petraeus_rings_opening_bell_at_NY_Stock_Exchange_-_Flickr_-_The_Central_Intelligence_Agency.jpg
 
-<!-- Lead item is DOWQUOTE. Use that to segue to the week's notable market action, inclduing big surge in Bitcoin
+Wikimedia caption: NEW YORK, NY - SEPTEMBER 18: Director David H. Petraeus of the Central Intelligence Agency rings the opening bell at the New York Stock Exchange on September 18, 2012 in observance of CIA's 65th anniversary. For more information about CIA, visit www.cia.gov.
+
+-->
+*Photo by Ben Hider/NYSE Euronext staff via Wikimedia Commons*
+
+**A surprisingly timely quote** from legendary business journalist Charles Dow, uttered in 1900:
+
+*"There is always a disposition in people's minds to think that existing conditions will be permanent. When the market is down and dull, it is hard to make people believe that this is the prelude to a period of activity and advance. When the prices are up and the country is prosperous, it is always said that while preceding booms have not lasted, there are circumstances connected with this one which will make it unlike its predecessors and give assurance of permanency. The one fact pertaining to all conditions is that they will change."*
+
+By "the market," Dow no doubt meant the *stock* market. But the psychology he described could just have easily applied to crypto or bonds or gold or real estate or many other things.
+
+<!-- Some btc-related links... -->
+
+FXStreet market wrap: https://www.fxstreet.com/cryptocurrencies/news/breaking-bitcoin-price-hits-30-000-202310211756
+
+BTC dominance hit a 2-year high: https://www.theblock.co/post/258844/bitcoin-dominance-hits-highest-point-in-over-two-years
+
+Google searches about bitcoin are up. https://bitcoinist.com/bitcoin-etf-mania-sparks-a-surge-in-google-searches/
+
+30K btc have been taken off exchanges. https://bitcoinist.com/30000-btc-bitcoin-bull-run/
+
+https://www.theblock.co/post/258839/cointelegraph-tweet-hoax-shows-spot-etf-is-the-only-one-game-in-crypto-market-qcp
+
+https://www.coindesk.com/policy/2023/10/20/sec-likely-to-approve-spot-bitcoin-etf-in-next-few-months-jpmorgan/
+
+https://markets.businessinsider.com/news/currencies/bitcoin-price-outlook-government-cryptocurrency-seizures-crypto-investing-analysis-21shares-2023-10
 
 https://www.coindesk.com/markets/2023/10/20/bitcoin-inches-closer-to-30k-as-etf-hope-drives-bulls/
 
-Keep it to ~400 words.
+Altcoin factoids: https://www.theblock.co/post/258682/major-altcoins-gain-ground-closing-in-on-bitcoins-week-long-rally | https://decrypt.co/202554/week-in-coins-solana-bitcoin-xrp-ripple | https://www.coindesk.com/markets/2023/10/20/solana-rallies-26-in-a-week-despite-ftx-sale-fears-whats-behind-the-move/
 
--->
+https://www.theblock.co/post/258833/crypto-spot-volumes-pick-up-amid-bitcoin-rally
 
-### Top News
+Cointelegraph jumped the gun on reporting a bitcoin ETF approval. Yikes.  https://cointelegraph.com/news/clarification-sharing-false-spot-bitcoin-etf-news | https://decrypt.co/202616/this-week-crypto-twitter-fake-etf-news-pumps-bitcoin
 
-- https://www.coindesk.com/policy/2023/10/17/ftx-plans-to-return-90-of-customer-funds-but-theres-a-catch/
+<!-- Dig at cramer -->
+https://www.coindesk.com/markets/2023/10/11/mr-bitcoin-is-about-to-go-down-big-jim-cramer-expects-lower-prices/
 
-- https://www.coindesk.com/policy/2023/10/16/california-bitlicense-bill-signed-by-gov-newsom/
+https://www.coindesk.com/business/2023/10/18/coinbase-trading-volume-slows-further-as-crypto-winter-continues-berenberg/
 
-- https://www.coindesk.com/policy/2023/10/19/absolutely-not-former-ftx-general-counsel-says-he-never-approved-loans-of-customer-funds/
+<!-- kicker: satoshi bell ringing -->
 
-- https://www.coindesk.com/markets/2023/10/11/mr-bitcoin-is-about-to-go-down-big-jim-cramer-expects-lower-prices/
+### Week in Review
 
-- https://www.coindesk.com/business/2023/10/18/coinbase-trading-volume-slows-further-as-crypto-winter-continues-berenberg/
+- **New York's attorney general sued** Genesis, Gemini, and Digital Currency Group, alleging they defrauded crypto investors of $1 billion. ([Decrypt](https://decrypt.co/202343/nyag-charges-genesis-gemini-dcg-defrauding-232000-investors))  **California enacted new statewide crypto regulations.** https://www.coindesk.com/policy/2023/10/16/california-bitlicense-bill-signed-by-gov-newsom/ | New FBI charges https://www.coindesk.com/policy/2023/10/20/fbi-charges-6-for-allegedly-running-30m-money-transmitting-business-using-crypto/ | **The SEC dropped its charges against Ripple's CEO.** https://www.coindesk.com/policy/2023/10/19/sec-drops-charges-against-ripple-ceo-garlinghouse-chairman-larsen/
 
-- Cointelegraph jumped the gun on reporting a bitcoin ETF approval. Yikes.  https://cointelegraph.com/news/clarification-sharing-false-spot-bitcoin-etf-news
+- Tether to publish real-time reserve data. https://www.benzinga.com/markets/cryptocurrency/23/10/35356411/tether-to-publish-reserve-data-in-real-time-report
 
-- Wired podcast on the future of crypto.  https://www.wired.com/story/have-a-nice-future-podcast-24/
+- Lightning network core dev leaves, expresses worries about new attacks. https://cointelegraph.com/news/bitcoin-core-developer-antoine-riard-steps-back-lightning-network-dilemma
 
-- Israel says it has frozen numerous crypto accounts and seized tokens being used to fund Hamas. <!-- Need link -->
+- Vitalik remarks: https://decrypt.co/202548/vitaliks-biggest-worries-crypto-stagnating-ai-risks-says-ethereum-co-founder
 
-- https://www.coindesk.com/markets/2023/10/17/tokenized-rwas-could-grow-to-a-10t-market-by-2030-as-crypto-converges-to-tradfi-report/ | https://www.coindesk.com/business/2023/10/11/jpmorgan-debuts-tokenized-blackrock-shares-as-collateral-with-barclays/
+- **Binance announced new European partnerships.** https://www.coindesk.com/business/2023/10/19/binance-says-it-has-onboarded-new-euro-fiat-partners-for-deposits-withdrawals/ | https://www.theblock.co/post/258800/binance-halting-service-for-european-visa-debit-card | https://bitcoinist.com/binance-to-terminate-eea-visa-debit-card-service/
+
+- The transparency of AI models is getting worse. https://decrypt.co/202555/ai-model-transparency-getting-worse-stanford-researchers
+
+- **Custody companies announced new freezes on crypto wallets linked to violence in Israel and Ukraine.** https://www.msn.com/en-ca/news/world/tether-freezes-crypto-linked-to-terrorism-and-warfare-in-israel-and-ukraine/ar-AA1ilddp | https://news.yahoo.com/cryptocurrency-companies-freeze-accounts-block-121052183.html
+
+- **FTX update:** https://www.coindesk.com/policy/2023/10/17/ftx-plans-to-return-90-of-customer-funds-but-theres-a-catch/ | https://www.coindesk.com/policy/2023/10/19/absolutely-not-former-ftx-general-counsel-says-he-never-approved-loans-of-customer-funds/ | https://decrypt.co/202583/google-blackrock-considered-investing-ftx-before-bankruptcy | https://decrypt.co/202583/google-blackrock-considered-investing-ftx-before-bankruptcy
+
+- **Tokenized real-world assets** could grow to a $10 trillion market by 2030. https://www.coindesk.com/markets/2023/10/17/tokenized-rwas-could-grow-to-a-10t-market-by-2030-as-crypto-converges-to-tradfi-report/ | https://www.coindesk.com/business/2023/10/11/jpmorgan-debuts-tokenized-blackrock-shares-as-collateral-with-barclays/ | https://www.coindesk.com/business/2023/10/20/tokenization-of-rwas-gets-boost-with-dtcc-deal-to-buy-blockchain-startup-securrency/
 
 ### Odds & Ends
 
-- https://www.washingtonpost.com/health/interactive/2023/stress-chronic-illness-aging/
+- **Reminder:** It's good to stay informed about global events like the war in Israel. But remember to take breaks of at least 30 minutes as well, for your mental health. The Washington Post's Heather Kelly just covered [some handy tips](https://www.washingtonpost.com/technology/2022/03/29/tech-tips-news-anxiety/) on tearing yourself away from "doomscrolling."
 
-- NYT: RTO has failed. Get over it. https://www.nytimes.com/2023/10/16/opinion/office-work-home-remote.html
+- **Stanford economist Nicholas Bloom** says reams of data make it clear: Knowledge workers will never return en masse to the office for a old Monday-to-Friday schedule by default. Hybrid work has definitively won. ([New York Times](https://www.nytimes.com/2023/10/16/opinion/office-work-home-remote.html))
 
-- How to avoid doomscrolling. https://www.washingtonpost.com/technology/2022/03/29/tech-tips-news-anxiety/
-
-- Breakdancing will be an Olympic sport at the 2024 Games. https://www.nytimes.com/2023/10/10/arts/dance/olympics-breaking-dance.html
+- **ICYMI:** Breakdancing will be an Olympic sport at the 2024 Games. ([New York Times](https://www.nytimes.com/2023/10/10/arts/dance/olympics-breaking-dance.html))
 
 <!-- Boilerplate needs re-working. This is version from last week... -->
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please join our email list.**_
 
-_**Note: #Web3Weekly content is intended for journalistic purposes only, not as investment advice. Always [DYOR](https://www.urbandictionary.com/define.php?term=DYOR) and consult appropriate financial professionals before making investment decisions.**_
+<!-- _**Note: #Web3Weekly content is intended for journalistic purposes only, not as investment advice. Always [DYOR](https://www.urbandictionary.com/define.php?term=DYOR) and consult appropriate financial professionals before making investment decisions.**_ -->
 
 _**Best wishes for a healthy and productive week ahead.**_  
 
